--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,63 +2,25 @@ version: '3.7'
 
 services:
   kong-database:
-    image: postgres:${POSTGRES_VERSION:-latest}
-    container_name: kong-database
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER:-kong}
-      - POSTGRES_DB=${POSTGRES_DB:-kong}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-kong}
-    volumes:
-      - ./pg_data:/var/lib/postgresql/data
+    container_name: kong:latest
     restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  kong:
-    depends_on:
-      - kong-database
-    image: kong:${KONG_VERSION:-latest}
-    container_name: kong
-    restart: always
+    container_name: kong-db-less
     environment:
-      - TZ=${TZ:-Asia/Bangkok}
-      - KONG_DATABASE=postgres
-      - KONG_PG_HOST=${KONG_PG_HOST:-kong-database}
-      - KONG_PG_DATABASE=${POSTGRES_DB:-kong}
-      - KONG_PG_USER=${POSTGRES_USER:-kong}
-      - KONG_PG_PASSWORD=${POSTGRES_PASSWORD:-kong}
-      - KONG_ADMIN_LISTEN=${KONG_ADMIN_LISTEN:-127.0.0.1:8001}
-      - KONG_PROXY_LISTEN=${KONG_PROXY_LISTEN:-0.0.0.0:8000, 0.0.0.0:8443 ssl http2}
-      - KONG_STATUS_LISTEN=127.0.0.1:8100
-      - KONG_NGINX_HTTP_RESOLVER=${KONG_NGINX_HTTP_RESOLVER:-8.8.8.8}
-      - KONG_PROXY_ERROR_LOG=/dev/stderr
+      - KONG_DATABASE=off 
+      - KONG_DECLARATIVE_CONFIG=/etc/kong/conf.d/kong.yml
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+      - KONG_LOG_LEVEL=debug
       - KONG_ADMIN_ERROR_LOG=/dev/stderr
-      - KONG_TRUSTED_IPS=0.0.0.0/0,::/0
-      - KONG_REAL_IP_RECURSIVE=on
+    volumes:
+      - ./conf.d:/etc/kong/conf.d
     ports:
       - 80:8000
-      - 443:8443 
-      - 127.0.0.1:8001:8001
-    healthcheck:
-      test: ["CMD", "wget", "-O-", "http://127.0.0.1:8100/status"]
-      interval: 5s
-      timeout: 2s
-      retries: 15
-    
-  # https://github.com/pantsel/konga/issues/462#issuecomment-633209833
-  konga:
-    image: pantsel/konga
-    container_name: konga
-    restart: always
-    environment:
-      # For use build-in filesystem db,
-      # Konga creator said `I've done it with no problems on production environments.`
-      # But the default `sails-disk` adapter is not designed for use as a production database;
-      - NODE_ENV=development
-    ports:
-      - 127.0.0.1:1337:1337
-    volumes:
-      - ./konga_data:/app/kongadata
+      - 443:8443
+      - 8001:8001
+
+    config-init:
+      image: kong:latest
+      working_dir: /etc/kong/conf.d
+      volumes:
+        - ./conf.d:etc/kong/conf.d
+      command: kong config init kong.yml -vv
